[gd_scene load_steps=9 format=3 uid="uid://buwh26jx6astb"]

[ext_resource type="Script" path="res://tutorial.gd" id="1_2hot5"]
[ext_resource type="Texture2D" uid="uid://cejhuon40c5em" path="res://UI/white.png" id="2_hubgc"]
[ext_resource type="Texture2D" uid="uid://k4q22y1psrj5" path="res://UI/telefoning-man.png" id="3_r2ikl"]
[ext_resource type="FontFile" uid="uid://cuurcmr0x4443" path="res://UI/Erika Type.ttf" id="4_5l1bg"]
[ext_resource type="Texture2D" uid="uid://m0u7jk0pynwg" path="res://UI/mad-man.png" id="4_ulmrh"]
[ext_resource type="Texture2D" uid="uid://cla4ugp871s78" path="res://UI/happy-man.png" id="5_ifu5y"]

[sub_resource type="LabelSettings" id="LabelSettings_3hftt"]
font = ExtResource("4_5l1bg")
font_size = 12
font_color = Color(0, 0, 0, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_doveb"]
font = ExtResource("4_5l1bg")
font_size = 40
font_color = Color(0, 0, 0, 1)

[node name="Tutorial" type="Node2D"]
script = ExtResource("1_2hot5")

[node name="Node" type="Node" parent="."]

[node name="Background" type="Sprite2D" parent="Node"]
scale = Vector2(0.908426, 0.908426)
texture = ExtResource("2_hubgc")
centered = false

[node name="man1" type="Sprite2D" parent="Node"]
modulate = Color(0, 0, 0, 1)
position = Vector2(585, 189)
scale = Vector2(-0.187123, 0.250228)
texture = ExtResource("3_r2ikl")

[node name="man2" type="Sprite2D" parent="Node"]
visible = false
modulate = Color(0, 0, 0, 1)
position = Vector2(550, 189)
scale = Vector2(-1.45404, 1.94439)
texture = ExtResource("4_ulmrh")

[node name="man3" type="Sprite2D" parent="Node"]
visible = false
modulate = Color(0, 0, 0, 1)
position = Vector2(586, 180)
scale = Vector2(-1.39369, 1.86369)
texture = ExtResource("5_ifu5y")

[node name="textlabelOld" type="Label" parent="Node"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
z_index = 3
layout_direction = 2
offset_left = 64.0
offset_top = 348.0
offset_right = 65.0
offset_bottom = 352.0
scale = Vector2(1026.3, 17.875)
size_flags_vertical = 6
text = "TEST"
label_settings = SubResource("LabelSettings_3hftt")
horizontal_alignment = 1
justification_flags = 0
text_overrun_behavior = 2

[node name="textlabel" type="Label" parent="Node"]
offset_left = 20.0
offset_top = 354.0
offset_right = 1120.0
offset_bottom = 635.0
text = "Test"
label_settings = SubResource("LabelSettings_doveb")
autowrap_mode = 2
